--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
-  "name": "react-storybook-taskbox-bit",
+  "name": "taskbox-11",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4"
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^24.0.0",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.50",
+    "@types/react-dom": "^16.9.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
+    "react-scripts": "3.4.3",
+    "redux": "^4.0.5",
+    "typescript": "~3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -20,10 +26,7 @@
     "build-storybook": "build-storybook -s public"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": "react-app"
   },
   "browserslist": {
     "production": [
@@ -38,11 +41,18 @@
     ]
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^6.1.7",
-    "@storybook/addon-essentials": "^6.1.7",
-    "@storybook/addon-links": "^6.1.7",
-    "@storybook/node-logger": "^6.1.7",
-    "@storybook/preset-create-react-app": "^3.1.5",
-    "@storybook/react": "^6.1.7"
+    "@babel/core": "^7.11.6",
+    "@storybook/addon-actions": "^5.3.21",
+    "@storybook/addon-docs": "^5.3.21",
+    "@storybook/addon-essentials": "^5.3.21",
+    "@storybook/addon-links": "^5.3.21",
+    "@storybook/addon-storyshots": "^5.3.21",
+    "@storybook/node-logger": "^5.3.21",
+    "@storybook/preset-create-react-app": "^3.1.4",
+    "@storybook/react": "^6.0.22",
+    "@types/react-redux": "^7.1.9",
+    "babel-loader": "^8.1.0",
+    "react-is": "^16.13.1",
+    "react-test-renderer": "^16.13.1"
   }
 }
